--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,11 +2,13 @@ body {
   font-family: Sans-serif;
 }
 
+
 .content {
   margin: 0 auto;
   width: 100%;
   text-align: center;
 }
+
 
 .logo {
   font-family: "Gill Sans";
@@ -15,10 +17,12 @@ body {
   color: #323232;
 }
 
+
 .header p {
   color: #898989;
   font-size: 1.5em;
 }
+
 
 .form {
   padding: 2.5em 0;
@@ -41,10 +45,12 @@ body {
   padding: 0.6em 3em;
 }
 
+
 #result {
   width: 16%;
   margin: 0 auto;
 }
+
 
 .coins {
   list-style: none;
@@ -54,19 +60,28 @@ body {
 
 .coins li {
   margin-bottom: 0.5em;
-  float: right;
+  text-align: left;
 }
 
+
 .coin {
+  text-align: center;
   display: inline-block;
   font-size: 1em;
   width: 2.5em;
   height: 2.5em;
-  margin-left: 0.4em;
   line-height: 2.5em;
+  margin-left: 0.4em;
   border: 1px solid #000;
   border-radius: 50%;
   box-shadow: inset 0 0 0 0.2em #000;
   background-color: #F2B50F;
   color: #000;
+}
+
+.coin.pence {
+  font-size: 0.8em;
+  width: 2.3em;
+  height: 2.3em;
+  line-height: 2.3em;
 }
